[tool.poetry]
name = "line-provider"
version = "0.1.0"
description = ""
authors = ["videbul <videbul@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.114.1"
pydentic = "^0.0.1.dev3"
uvicorn = "^0.30.6"
sqlalchemy = "^2.0.34"
python-dotenv = "^1.0.1"
alembic = "^1.13.2"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
